@@ -378,11 +378,11 @@
                                 wall is enabled. These settings may be
                                 overridden at boot time with the
                                 kernel command line options
-                                <literal>systemd.journald.forward_to_syslog=</literal>,
-                                <literal>systemd.journald.forward_to_kmsg=</literal>,
-                                <literal>systemd.journald.forward_to_console=</literal>
+                                <literal>journald.forward_to_syslog=</literal>,
+                                <literal>journald.forward_to_kmsg=</literal>,
+                                <literal>journald.forward_to_console=</literal>
                                 and
-                                <literal>systemd.journald.forward_to_wall=</literal>.
+                                <literal>journald.forward_to_wall=</literal>.
                                 When forwarding to the console, the
                                 TTY to log to can be changed
                                 with <varname>TTYPath=</varname>,
