@@ -139,10 +139,10 @@
 
                 <variablelist class='kernel-commandline-options'>
                         <varlistentry>
-                                <term><varname>systemd.journald.forward_to_syslog=</varname></term>
-                                <term><varname>systemd.journald.forward_to_kmsg=</varname></term>
-                                <term><varname>systemd.journald.forward_to_console=</varname></term>
-                                <term><varname>systemd.journald.forward_to_wall=</varname></term>
+                                <term><varname>journald.forward_to_syslog=</varname></term>
+                                <term><varname>journald.forward_to_kmsg=</varname></term>
+                                <term><varname>journald.forward_to_console=</varname></term>
+                                <term><varname>journald.forward_to_wall=</varname></term>
 
                                 <listitem><para>Enables/disables
                                 forwarding of collected log messages
